# EngineOpenGL

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  cpp.hint
.cache/clangd/index/: 3dcalc.cpp.3EA3B7E7B6B64191.idx  3dcalc.hpp.333490BBDCC4EC09.idx  Importer.hpp.0E8FC58DD9C400A2.idx  Importer.hpp.749F1DFC72F3BDFC.idx  MathFunctions.h.316F941EFB1E5690.idx  MathFunctions.h.BB56587ADB1CB5EF.idx  _fixes.hpp.934130414CF79D3E.idx  _fixes.hpp.CF3E6A6955F48E02.idx  _vectorize.hpp.C2898172E8DC4358.idx  _vectorize.hpp.F43D94950987BEB7.idx  aabb.h.6D3FC36A87D83CF2.idx  aabb.h.DAC56038B94C5046.idx  anim.h.A6D34F48085D1C5F.idx  anim.h.DF041D145CAF8957.idx  buffer.cpp.3BC240D78C5A703B.idx  buffer.cpp.5A674CF5EF76A436.idx  buffer.cpp.E2995FA1E40D50DE.idx  buffer.hpp.599DED7410B7B668.idx  buffer.hpp.C1BF2A2CC45B50B8.idx  buffer.hpp.DDB67C47081B6FBD.idx  (+591 more)
src/: CMakeLists.txt  cmake_install.cmake  main.cpp  sources
src/3dcalc/: 3dcalc.cpp  3dcalc.hpp
src/3dmodels/stormtrooper/: shuffling.fbx
src/assets/: CMakeLists.txt  cmake_install.cmake
src/assets/3dmodels/bust/: license.txt
src/assets/3dmodels/simplex/: simplex.blend1  simplex.mtl
src/assets/shaders/: a.frag  a.vert  bloom.frag  bloom.vert  bloom_up.frag  bloom_up.vert  cube.frag  cube.vert  default.frag  default.vert  fire.vert  gjk.frag  indirect.frag  indirect.vert  quad.frag  quad.vert  rect.frag  rect.vert  refr.vert  test.frag  vol.frag  vol.vert  volfill.comp  water.vert  water1.tese
src/engine/: engine.cpp  engine.hpp
src/engine/allocators/: idallocator.hpp
src/engine/camera/: camera.cpp  camera.hpp
src/engine/controller/: controller.cpp  controller.hpp
src/engine/controller/keyboard/: keyboard.cpp  keyboard.hpp
src/engine/ecs/: ecs.hpp  sorted_vec.hpp  typemap.hpp  types.hpp
src/engine/geometry/: model.hpp
src/engine/gpu/buffers/: buffer.cpp  buffer.hpp  ubo.cpp  ubo.hpp
src/engine/gpu/framebuffer/: framebuffer.cpp  framebuffer.hpp
src/engine/gpu/resource_manager/: gpu_res_mgr.cpp  gpu_res_mgr.hpp
src/engine/gpu/shaderprogram/: shader.cpp  shader.hpp  shader_dec.hpp  shader_manager.cpp  shader_manager.hpp  shader_template.cpp
src/engine/gpu/texture/: texture.cpp  texture.hpp
src/engine/graphics/: material.hpp  renderer.hpp
src/engine/gui/: gui.cpp  gui.hpp  render_graph.cpp  render_graph.hpp
src/engine/legacy/: catmull_clark.txt
src/engine/legacy/model/: animation.cpp  importers.cpp  model.hpp
src/engine/legacy/physics/: gjk.hpp
src/engine/legacy/subsystems/ecs/: components.hpp  ecs.cpp  ecs.d.hpp  typemap.hpp
src/engine/legacy/subsystems/renderer/: systems.cpp  systems.hpp
src/engine/legacy/wrappers/: include_all.hpp
src/engine/model/: animation.cpp  animation.hpp  importers.cpp  importers.hpp  model.cpp  model.hpp
src/engine/physics/: gjk.cpp  gjk.hpp
src/engine/renderer/: buffer_binder.cpp  buffer_binder.hpp  components.hpp  draw_commands.cpp  draw_commands.hpp  pipeline.cpp  pipeline.hpp  pipeline_builder.hpp  postprocess.cpp  postprocess.hpp  renderer.cpp  renderer.hpp  schedule.hpp  systems.cpp  systems.hpp  typedefs.hpp
src/engine/scene/: scene.cpp  scene.hpp
src/engine/signal/: signal.hpp
src/engine/subsystems/ecs/: components.hpp  ecs.cpp  ecs.d.cpp  ecs.d.hpp  ecs.hpp
src/engine/subsystems/gui/: ecs_comps.cpp  ecs_comps.hpp  gui.cpp  gui.hpp  render_graph.cpp  render_graph.hpp
src/engine/subsystems/renderer/: components.hpp  renderer.cpp  systems.cpp  systems.hpp
src/engine/types/: debug_logger.hpp  idallocator.hpp  idresource.hpp  shared_resource.hpp  signal.hpp  sorted_vec.hpp  types.hpp
src/engine/window/: window.cpp  window.hpp
src/engine/wrappers/buffer/: buffer.cpp  buffer.hpp  ubo.cpp  ubo.hpp
src/engine/wrappers/shader/: shader.cpp  shader_dec.hpp  shader_manager.cpp  shader_manager.hpp  shader_template.cpp
src/engine/wrappers/texture/: texture.cpp  texture.hpp
src/engine/wrappers/window/: window.cpp  window.hpp
src/shaders/: fire.frag  gjk.vert  rect.frag  refr.frag  sky.vert  test.vert  vol.vert  water1.tesc
src/timer/: timer.hpp
tests/: CMakeLists.txt  sorted_vec.cpp
